# craftinginterpreters

./: .gitignore  README.md  dune-project  gen_tests.ml  olox.opam
lib/: coremap.ml  dune  environment.ml  expression.ml  interpreter.ml  lexer.ml  lox_error.ml  object.ml  parser.ml  reader.ml  resolver.ml  scanner.ml  statement.ml  token.ml  value.ml  var_map.ml
notes/: crafting_interpreters.md
test/: assignment.ml  benchmark.ml  call.ml  class.ml  closure.ml  comments.ml  constructor.ml  dune  empty_file.ml  expressions.ml  field.ml  interpreter.ml  limit.ml  method.ml  nil.ml  number.ml  operator.ml  parser.ml  precedence.ml  print.ml  regression.ml  scanning.ml  string.ml  unexpected_character.ml  variable.ml
test/assignment/: associativity.ml  global.ml  grouping.ml  infix_operator.ml  local.ml  prefix_operator.ml  syntax.ml  undefined.ml
test/benchmark/: binary_trees.ml  dune  equality.ml  fib.ml  instantiation.ml  invocation.ml  method_call.ml  properties.ml  string_equality.ml  trees.ml  zoo.ml  zoo_batch.ml
test/block/: dune  empty.ml  scope.ml
test/bool/: dune  equality.ml  not.ml
test/call/: bool.ml  dune  nil.ml  num.ml  object.ml  string.ml
test/class/: dune  empty.ml  inherit_self.ml  inherited_method.ml  local_inherit_other.ml  local_inherit_self.ml  local_reference_self.ml  reference_self.ml
test/closure/: assign_to_closure.ml  assign_to_shadowed_later.ml  close_over_function_parameter.ml  close_over_later_variable.ml  close_over_method_parameter.ml  closed_closure_in_function.ml  dune  nested_closure.ml  open_closure_in_function.ml  (+5 more)
(+244 files in other folders)
